Adicionando os padrões Decorator e Composite

--- a/files/saida.html
+++ b/files/saida.html
@@ -1,4 +1,7 @@
-<html><head></head><body><div><h1>Cabecalho</h1></div>
+<html><head></head><body><!--Inicio do cabecalho--><div><h1>Cabecalho</h1></div>
+<div><p>Paragrafo no cabecalho</p></div>
+<!--Fim do cabecalho--><!--Inicio do corpo--><div><h1>Corpo</h1></div>
 <div><p>Paragrafo do corpo</p></div>
-<div><p>Rodape</p></div>
-</body></html>
+<!--Fim do corpo--><!--Inicio do rodape--><div><h1>Rodape</h1></div>
+<div><p>Paragrafo do rodape</p></div>
+<!--Fim do rodape--></body></html>
